--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@
 #*.zip
 
 # Ignore outpur of CtauErr -> 3 - 20 MB
-Macros/psi2S_230512/roots/CtauErr/*.root
-Macros/pp_psi2S_230512/roots/CtauErr/*.root
+/Macros/psi2S_230512/roots/2DFit_No_Weight/CtauErr/
+/Macros/pp_psi2S_230512/roots/2DFit_No_Weight/CtauErr/
 
 # Ignore root inputs - 8 GB
 skimmedFiles/*.root
